<resources>
    <string name="app_name">壹个博客</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <!--article detail-->
    <string name="have_comments">最新评论</string>
    <string name="none_comments">暂无评论，赶快评论吧！</string>
    <string name="title_comment_dialog">我来说两句</string>

    <!--nav-->
    <string name="home">首页</string>
    <string name="category">我的文章</string>
    <string name="message">留言</string>
    <string name="share">分享</string>
    <string name="about">关于</string>

    <!--login-->
    <string name="prompt_userId">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">密码太简单了！</string>
    <string name="error_incorrect_password">密码不正确！</string>
    <string name="error_inconformity_password">密码不一致！</string>
    <string name="error_password_required">密码不能为空！</string>
    <string name="error_userId_required">账号不能为空！</string>

    <!--search result-->
    <string name="search_result_empty">未搜索到相关信息...</string>

    <!--user center-->
    <string name="user_center_edit">修改信息</string>
    <string name="user_center_article">我的博客</string>
    <string name="user_center_message">我的留言</string>

    <!--user info edit-->
    <string name="user_info_avatar">修改头像</string>

</resources>
